// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxCell renders correctly passing props to PermissionsCheckbox in TableCell 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingCheckbox MuiTableCell-sizeMedium css-1h6bb6-MuiTableCell-root"
        >
          <div>
            CheckBox mock 
            {"checked":true,"color":"default","className":"active"}
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PermissionsCheckbox when checkbox user is the current user renders with correct check status and as disabled 1`] = `
<div>
  <div>
    CheckBox mock 
    {"checked":true,"color":"default","className":"implicit","disabled":true}
  </div>
</div>
`;

exports[`PermissionsCheckbox when user has rights equal to CheckboxSpec returns an checked active selection check box 1`] = `
<div>
  <div>
    CheckBox mock 
    {"checked":true,"color":"default","className":"active"}
  </div>
</div>
`;

exports[`PermissionsCheckbox when user has rights greater than CheckboxSpec returns an checked implicit selection check box 1`] = `
<div>
  <div>
    CheckBox mock 
    {"checked":true,"color":"default","className":"implicit"}
  </div>
</div>
`;

exports[`PermissionsCheckbox when user has rights less than CheckboxSpec returns an unchecked check box 1`] = `
<div>
  <div>
    CheckBox mock 
    {"checked":false,"color":"default"}
  </div>
</div>
`;

exports[`RemoveUserButtonCell renders as disabled when on the row of the current user 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingCheckbox MuiTableCell-sizeMedium tableCell css-1h6bb6-MuiTableCell-root"
        >
          <button
            class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-mf1cb5-MuiButtonBase-root-MuiIconButton-root"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              aria-hidden="true"
              class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
            >
              remove_circle_outline
            </span>
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
